--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@
 
 
 [tox]
-envlist = py{27,34,35,36,py,py3}-{linux,osx}_{non_root,root}
+envlist = py{27,34,35,36,py,py3}-{linux,osx}_{non_root,root}, py{27,36}-windows
 skip_missing_interpreters = true
 minversion = 2.9
 
@@ -11,7 +11,6 @@ minversion = 2.9
 [testenv:py27-pcapdnet_root]
 description = "Scapy unit tests - pcap & dnet"
 whitelist_externals = {[testenv]whitelist_externals}
-setenv = {[testenv]setenv}
 passenv = SCAPY_USE_PCAPDNET
 deps = mock
        cryptography
@@ -27,21 +26,24 @@ commands =
 [testenv]
 description = "Scapy unit tests"
 whitelist_externals = sudo
-setenv = SCAPY_ROOT_DIR={env:PWD}
+passenv = PATH PWD PROGRAMFILES WINDIR SYSTEMROOT
 deps = mock
        cryptography
        coverage
        python-can
 
+
 platform =
   linux_non_root,linux_root: linux
   osx_non_root,osx_root: darwin
+  windows: win32
 
 commands =
   linux_non_root: coverage run --rcfile=.coveragerc.tox -a -m scapy.tools.UTscapy -c ./test/configs/linux.utsc -K random_weird_py3 -K netaccess -K needs_root {posargs}
   linux_root: sudo -E {envpython} -m coverage run --rcfile=.coveragerc.tox -a -m scapy.tools.UTscapy -c ./test/configs/linux.utsc -K random_weird_py3 {posargs}
   osx_non_root: coverage run --rcfile=.coveragerc.tox -a -m scapy.tools.UTscapy -c test/configs/osx.utsc -K manufdb -K tshark -K random_weird_py3 -K netaccess -K needs_root {posargs}
   osx_root: sudo -E {envpython} -m coverage run --rcfile=.coveragerc.tox -a -m scapy.tools.UTscapy -c test/configs/osx.utsc -K manufdb -K tshark -K random_weird_py3 {posargs}
+  windows: {envpython} -m coverage run --rcfile=.coveragerc.tox -a -m scapy.tools.UTscapy -c test/configs/windows.utsc -K random_weird_py3 {posargs}
   coverage combine
 
 
