--- a/tox.ini
+++ b/tox.ini
@@ -51,6 +51,11 @@ passenv = TOXENV CI TRAVIS TRAVIS_*
 deps = codecov
 commands = codecov -e TOXENV
 
+[testenv:docs]
+changedir = doc/scapy
+deps = sphinx
+       sphinx_rtd_theme
+commands = sphinx-build -W . _build/html
 
 [testenv:flake8]
 description = "Check Scapy code style & quality"
