Add APPVEYOR_* to env vars

--- a/tox.ini
+++ b/tox.ini
@@ -49,7 +49,7 @@ commands =
 
 [testenv:codecov]
 description = "Upload coverage results to codecov"
-passenv = TOXENV CI TRAVIS TRAVIS_*
+passenv = TOXENV CI TRAVIS TRAVIS_* APPVEYOR APPVEYOR_*
 deps = codecov
 commands = codecov -e TOXENV
 
