PyPy: cryptography tests

--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ description = "Scapy unit tests"
 whitelist_externals = sudo
 setenv = SCAPY_ROOT_DIR={env:PWD}
 deps = mock
-       {py27,py34,py35,py36}: cryptography
+       cryptography
        coverage
        python-can
 
