--- a/tox.ini
+++ b/tox.ini
@@ -59,6 +59,12 @@ deps = sphinx
        sphinx_rtd_theme
 commands = sphinx-build -W . _build/html
 
+[testenv:spell]
+changedir = scapy
+deps = codespell
+# dhcp6 contains french: ignore it
+commands = codespell --ignore-words=../.travis/codespell_ignore.txt --skip="*.pyc,*dhcp6.py"
+
 [testenv:flake8]
 description = "Check Scapy code style & quality"
 skip_install = true
