Apply spellcheck to non-code files

--- a/tox.ini
+++ b/tox.ini
@@ -60,10 +60,9 @@ deps = sphinx
 commands = sphinx-build -W . _build/html
 
 [testenv:spell]
-changedir = scapy
 deps = codespell
-# dhcp6 contains french: ignore it
-commands = codespell --ignore-words=../.travis/codespell_ignore.txt --skip="*.pyc,*dhcp6.py"
+# dhcp6 and the ipynb files contains french: ignore them
+commands = codespell --ignore-words=.travis/codespell_ignore.txt --skip="*.pyc,*.png,*.raw,*.pdf,*.pcap,*.js,*.html,*.der,*_build*,*dhcp6.py,*.ipynb" scapy/ doc/ test/ .github/
 
 [testenv:flake8]
 description = "Check Scapy code style & quality"
