--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@
 
 
 [tox]
-envlist = py{27,34,35,36,py,py3}-{linux,osx}_{non_root,root}, py{27,36}-windows
+envlist = py{27,34,35,36,py,py3}-{linux,osx}_{non_root,root}, py{27,36}-windows-linux_garbage
 skip_missing_interpreters = true
 minversion = 2.9
 
@@ -21,6 +21,14 @@ deps = mock
        pydumbnet
 commands =
   sudo -E {envpython} -m coverage run --rcfile=.coveragerc.tox -a -m scapy.tools.UTscapy -c ./test/configs/osx.utsc -T test/bpf.uts -K manufdb -K tshark -K random_weird_py3 -K osx {posargs}
+
+
+[testenv:linux_garbage]
+description = "Scapy unit tests - garbage check"
+commands = sudo -E {envpython} -Werror -m scapy.tools.UTscapy -c ./test/configs/linux.utsc -K random_weird_py3 {posargs}
+deps = {[testenv]deps}
+passenv = {[testenv]passenv}
+whitelist_externals = {[testenv]whitelist_externals}
 
 
 [testenv]
