--- a/.travis.yml
+++ b/.travis.yml
@@ -83,6 +83,14 @@ matrix:
           env:
             - TOXENV=py36-linux_root,codecov
 
+        # Temporary Python 3.7 trick https://github.com/travis-ci/travis-ci/issues/9815
+        - os: linux
+          sudo: required
+          dist: xenial
+          python: 3.7
+          env:
+            - TOXENV=py37-linux_root,codecov
+
         - os: linux
           sudo: required
           python: 2.7
