--- a/.travis.yml
+++ b/.travis.yml
@@ -83,9 +83,11 @@ matrix:
           env:
             - TOXENV=py36-linux_root,codecov
 
-        - os: linux
-          sudo: required
+        # Temporary Python 3.7 trick https://github.com/travis-ci/travis-ci/issues/9815
+        - language: python
           python: 3.7
+          dist: xenial
+          sudo: true
           env:
             - TOXENV=py37-linux_root,codecov
 
