E741 - ambiguous variable name 'l'

--- a/tox.ini
+++ b/tox.ini
@@ -80,7 +80,7 @@ commands = flake8 scapy/
 
 # flake8 configuration
 [flake8]
-select = E1,E2,E30,E401,E5,E70,E71,E72,
+select = E1,E2,E30,E401,E5,E70,E71,E72,E74,
          F402,F8,
          W2,W3
 ignore = E731
