Spelling errors fixed

--- a/tox.ini
+++ b/tox.ini
@@ -69,8 +69,8 @@ commands = sphinx-build -W . _build/html
 
 [testenv:spell]
 deps = codespell
-# dhcp6 and the ipynb files contains french: ignore them
-commands = codespell --ignore-words=.travis/codespell_ignore.txt --skip="*.pyc,*.png,*.raw,*.pdf,*.pcap,*.js,*.html,*.der,*_build*,*dhcp6.py,*.ipynb" scapy/ doc/ test/ .github/
+# inet6, dhcp6 and the ipynb files contains french: ignore them
+commands = codespell --ignore-words=.travis/codespell_ignore.txt --skip="*.pyc,*.png,*.raw,*.pdf,*.pcap,*.js,*.html,*.der,*_build*,*inet6.py,*dhcp6.py,*.ipynb" scapy/ doc/ test/ .github/
 
 [testenv:flake8]
 description = "Check Scapy code style & quality"
