--- a/.travis.yml
+++ b/.travis.yml
@@ -96,10 +96,11 @@ matrix:
           env:
             - TOXENV=py27-osx_root,codecov
 
-        - os: osx
-          language: generic
-          env:
-            - SCAPY_SUDO=sudo SCAPY_USE_PCAPDNET=yes TOXENV=py27-pcapdnet_root,codecov
+        # FIXME - Networking with pcapdnet seem to be failing on OSX at the moment
+        #- os: osx
+        #  language: generic
+        #  env:
+        #    - SCAPY_SUDO=sudo SCAPY_USE_PCAPDNET=yes TOXENV=py27-pcapdnet_root,codecov
 
         - os: osx
           language: generic
