--- a/tox.ini
+++ b/tox.ini
@@ -114,6 +114,6 @@ commands = flake8 scapy/
 
 # flake8 configuration
 [flake8]
-ignore = E731, W504
+ignore = E731
 exclude = scapy/modules/six.py,
           scapy/modules/winpcapy.py
