--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,31 @@ passenv = {[testenv]passenv}
 whitelist_externals = {[testenv]whitelist_externals}
 
 
+[testenv:py36-isotp_kernel_module]
+description = "Scapy unit tests - ISOTP Linux kernel module"
+whitelist_externals = sudo
+                      git
+                      bash
+                      lsmod
+                      modprobe
+
+passenv = PATH PWD PROGRAMFILES WINDIR SYSTEMROOT
+deps = mock
+       cryptography
+       coverage
+       python-can
+
+commands =
+  sudo -E modprobe can
+  git clone --depth=1 https://github.com/linux-can/can-utils.git /tmp/can-utils
+  bash -c "cd /tmp/can-utils; autogen.sh; ./configure; make; sudo make install"
+  git clone --depth=1 https://github.com/hartkopp/can-isotp.git /tmp/can-isotp
+  bash -c "cd /tmp/can-isotp; make; sudo make modules_install; sudo modprobe can_isotp || sudo insmod ./net/can/can-isotp.ko" 
+  bash -c "rm -rf /tmp/can-utils /tmp/can-isotp"
+  lsmod
+  sudo -E {envpython} -m coverage run --rcfile=.coveragerc.tox -a -m scapy.tools.UTscapy -c ./test/configs/linux.utsc -K random_weird_py3 {posargs}
+
+
 [testenv]
 description = "Scapy unit tests"
 whitelist_externals = sudo
