Also add Py3.7 non-root

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,12 @@ matrix:
             - TOXENV=py36-linux_non_root,codecov
 
         - os: linux
+          dist: xenial
+          python: 3.7
+          env:
+            - TOXENV=py37-linux_non_root,codecov
+
+        - os: linux
           python: pypy
           env:
             - TOXENV=pypy-linux_non_root,codecov
