Load Windows Interfaces/routes using C calls.
Also Removes POWERSHELL_PROCESS

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,8 @@ description = "Scapy unit tests - pcap & dnet"
 whitelist_externals = {[testenv]whitelist_externals}
 passenv = SCAPY_USE_PCAPDNET
 deps = mock
+       # cryptography requirements
+       setuptools>=18.5
        cryptography
        coverage
        # Currently pcap & dnet are tested together. As pydumbnet does not
