--- a/tox.ini
+++ b/tox.ini
@@ -97,6 +97,15 @@ deps = codespell
 # inet6, dhcp6 and the ipynb files contains french: ignore them
 commands = codespell --ignore-words=.travis/codespell_ignore.txt --skip="*.pyc,*.png,*.raw,*.pdf,*.pcap,*.js,*.html,*.der,*_build*,*inet6.py,*dhcp6.py,*.ipynb" scapy/ doc/ test/ .github/
 
+[testenv:twine]
+description = "Check Scapy code distribution"
+skip_install = true
+deps = twine
+       setuptools>=38.6.0
+       cmarkgfm
+commands = python setup.py sdist
+           twine check dist/*
+
 [testenv:flake8]
 description = "Check Scapy code style & quality"
 skip_install = true
