--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 # Scapy tox configuration file
-# Copyright (C) 2018 Guillaume Valadon <guillaume@valadon.net>
+# Copyright (C) 2019 Guillaume Valadon <guillaume@valadon.net>
 
 
 [tox]
-envlist = py{27,34,35,36,37,py,py3}-{linux,osx}_{non_root,root}, py{27,36}-windows-linux_garbage
+envlist = py{27,34,35,36,37,py,py3}-{linux,bsd}_{non_root,root}, py{27,36}-windows-linux_garbage
 skip_missing_interpreters = true
 minversion = 2.9
 
@@ -74,14 +74,14 @@ deps = mock
 
 platform =
   linux_non_root,linux_root: linux
-  osx_non_root,osx_root: darwin
+  bsd_non_root,bsd_root: darwin|freebsd|openbsd|netbsd
   windows: win32
 
 commands =
   linux_non_root: coverage run --rcfile=.coveragerc.tox -a -m scapy.tools.UTscapy -c ./test/configs/linux.utsc -K random_weird_py3 -K netaccess -K needs_root {posargs}
   linux_root: sudo -E {envpython} -m coverage run --rcfile=.coveragerc.tox -a -m scapy.tools.UTscapy -c ./test/configs/linux.utsc -K random_weird_py3 {posargs}
-  osx_non_root: coverage run --rcfile=.coveragerc.tox -a -m scapy.tools.UTscapy -c test/configs/osx.utsc -K manufdb -K tshark -K random_weird_py3 -K netaccess -K needs_root {posargs}
-  osx_root: sudo -E {envpython} -m coverage run --rcfile=.coveragerc.tox -a -m scapy.tools.UTscapy -c test/configs/osx.utsc -K manufdb -K tshark -K random_weird_py3 {posargs}
+  bsd_non_root: coverage run --rcfile=.coveragerc.tox -a -m scapy.tools.UTscapy -c test/configs/osx.utsc -K manufdb -K tshark -K random_weird_py3 -K netaccess -K needs_root {posargs}
+  bsd_root: sudo -E {envpython} -m coverage run --rcfile=.coveragerc.tox -a -m scapy.tools.UTscapy -c test/configs/osx.utsc -K manufdb -K tshark -K random_weird_py3 {posargs}
   windows: {envpython} -m coverage run --rcfile=.coveragerc.tox -a -m scapy.tools.UTscapy -c test/configs/windows.utsc -K random_weird_py3 {posargs}
   coverage combine
 
