--- a/tox.ini
+++ b/tox.ini
@@ -25,8 +25,8 @@ commands =
   sudo -E {envpython} -m coverage run --rcfile=.coveragerc.tox -a -m scapy.tools.UTscapy -c ./test/configs/osx.utsc -T test/bpf.uts -K manufdb -K tshark -K random_weird_py3 -K osx {posargs}
 
 
-[testenv:linux_garbage]
-description = "Scapy unit tests - garbage check"
+[testenv:linux_warnings]
+description = "Scapy unit tests - health (garbage/deprecations) check"
 commands = sudo -E {envpython} -Werror -m scapy.tools.UTscapy -c ./test/configs/linux.utsc -K random_weird_py3 {posargs}
 deps = {[testenv]deps}
 passenv = {[testenv]passenv}
