Fix setup tools version on all tox builds

--- a/tox.ini
+++ b/tox.ini
@@ -43,6 +43,8 @@ whitelist_externals = sudo
 
 passenv = PATH PWD PROGRAMFILES WINDIR SYSTEMROOT
 deps = mock
+       # cryptography requirements
+       setuptools>=18.5
        cryptography
        coverage
        python-can
@@ -63,6 +65,8 @@ description = "Scapy unit tests"
 whitelist_externals = sudo
 passenv = PATH PWD PROGRAMFILES WINDIR SYSTEMROOT
 deps = mock
+       # cryptography requirements
+       setuptools>=18.5
        cryptography
        coverage
        python-can
