Skip *.gif, *.obs in Codespell test

--- a/tox.ini
+++ b/tox.ini
@@ -101,7 +101,7 @@ commands = sphinx-build -W . _build/html
 [testenv:spell]
 deps = codespell
 # inet6, dhcp6 and the ipynb files contains french: ignore them
-commands = codespell --ignore-words=.travis/codespell_ignore.txt --skip="*.pyc,*.png,*.raw,*.pdf,*.pcap,*.js,*.html,*.der,*_build*,*inet6.py,*dhcp6.py,*.ipynb,*.svg" scapy/ doc/ test/ .github/
+commands = codespell --ignore-words=.travis/codespell_ignore.txt --skip="*.pyc,*.png,*.raw,*.pdf,*.pcap,*.js,*.html,*.der,*_build*,*inet6.py,*dhcp6.py,*.ipynb,*.svg,*.gif,*.obs" scapy/ doc/ test/ .github/
 
 [testenv:twine]
 description = "Check Scapy code distribution"
