Decrease verbosity of the Flake8/Twine/Sphinx docs for readibility

--- a/tox.ini
+++ b/tox.ini
@@ -96,7 +96,7 @@ commands = codecov -e TOXENV
 changedir = doc/scapy
 deps = sphinx
        sphinx_rtd_theme
-commands = sphinx-build -W . _build/html
+commands = sphinx-build -q -W . _build/html
 
 [testenv:spell]
 deps = codespell
@@ -109,7 +109,7 @@ skip_install = true
 deps = twine
        setuptools>=38.6.0
        cmarkgfm
-commands = python setup.py sdist
+commands = python setup.py --quiet sdist
            twine check dist/*
 
 [testenv:flake8]
