Improve path detection & Add backup ethertypes

--- a/tox.ini
+++ b/tox.ini
@@ -125,3 +125,4 @@ commands = flake8 scapy/
 ignore = E731, W504
 exclude = scapy/modules/six.py,
           scapy/modules/winpcapy.py
+          scapy/modules/ethertypes.py
