--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -54,6 +54,8 @@ for:
       - choco install -n KB3033929 KB2919355 kb2999226
       - choco install -y wireshark
       # Install Python modules
+      # https://github.com/tox-dev/tox/issues/791
+      - "%PYTHON%\\python -m pip install virtualenv --upgrade"
       - "%PYTHON%\\python -m pip install tox"
 
 test_script:
