--- a/tox.ini
+++ b/tox.ini
@@ -86,11 +86,28 @@ commands =
   coverage combine
 
 
+[testenv:py27-linux_non_root_old-cryptography]
+description = "Scapy unit tests - old cryptography module"
+whitelist_externals = sudo
+passenv = PATH PWD PROGRAMFILES WINDIR SYSTEMROOT
+deps = mock
+       # cryptography requirements
+       setuptools>=18.5
+       cryptography==1.9
+       coverage
+       python-can
+
+commands =
+  coverage run -a -m scapy.tools.UTscapy -c ./test/configs/linux.utsc -K random_weird_py3 -K netaccess -K needs_root -K crypto_advanced {posargs}
+  coverage combine
+
+
 [testenv:codecov]
 description = "Upload coverage results to codecov"
 passenv = TOXENV CI TRAVIS TRAVIS_* APPVEYOR APPVEYOR_*
 deps = codecov
 commands = codecov -e TOXENV
+
 
 [testenv:docs]
 changedir = doc/scapy
@@ -98,12 +115,14 @@ deps = sphinx
        sphinx_rtd_theme
 commands = sphinx-build -q -W . _build/html
 
+
 [testenv:spell]
 description = "Check code for Grammar mistakes"
 skip_install = true
 deps = codespell
 # inet6, dhcp6 and the ipynb files contains french: ignore them
 commands = codespell --ignore-words=.travis/codespell_ignore.txt --skip="*.pyc,*.png,*.raw,*.pdf,*.pcap,*.js,*.html,*.der,*_build*,*inet6.py,*dhcp6.py,*.ipynb,*.svg,*.gif,*.obs" scapy/ doc/ test/ .github/
+
 
 [testenv:twine]
 description = "Check Scapy code distribution"
@@ -114,11 +133,13 @@ deps = twine
 commands = python setup.py --quiet sdist
            twine check dist/*
 
+
 [testenv:flake8]
 description = "Check Scapy code style & quality"
 skip_install = true
 deps = flake8
 commands = flake8 scapy/
+
 
 # flake8 configuration
 [flake8]
