Prevent test to be launched on *BSD

--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,7 @@ commands =
 description = "Scapy unit tests - health (garbage/deprecations) check"
 commands = sudo -E {envpython} -Werror -m scapy.tools.UTscapy -c ./test/configs/linux.utsc -K random_weird_py3 {posargs}
 deps = {[testenv]deps}
+platform = linux
 passenv = {[testenv]passenv}
 whitelist_externals = {[testenv]whitelist_externals}
 
