Mypy testing suite & various fixes

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ matrix:
         - os: linux
           python: 3.6
           env:
-            - TOXENV=flake8,twine,docs,spell
+            - TOXENV=mypy,flake8,twine,docs,spell
        
         # Run as a regular user
         - os: linux
