--- a/tox.ini
+++ b/tox.ini
@@ -110,6 +110,14 @@ deps = codecov
 commands = codecov -e TOXENV
 
 
+[testenv:mypy]
+description = "Check Scapy compliance against static typing"
+skip_install = true
+deps = mypy
+       typing
+commands = python .mypy/mypy_check.py
+
+
 [testenv:docs]
 changedir = doc/scapy
 deps = sphinx
