--- a/tox.ini
+++ b/tox.ini
@@ -111,6 +111,7 @@ commands = codecov -e TOXENV
 
 
 [testenv:generate_docs]
+description = "Regenerates the API reference doc tree"
 skip_install = true
 changedir = doc/scapy
 deps = sphinx
@@ -118,6 +119,14 @@ deps = sphinx
 commands =
   sphinx-apidoc --no-toc --separate --module-first --output-dir api ../../scapy ../../scapy/modules/ ../../scapy/tools/ ../../scapy/arch/ ../../scapy/contrib/cansocket* ../../scapy/all.py ../../scapy/layers/all.py
   sphinx-build -b html . _build/html
+
+
+[testenv:mypy]
+description = "Check Scapy compliance against static typing"
+skip_install = true
+deps = mypy
+       typing
+commands = python .config/mypy/mypy_check.py
 
 
 [testenv:docs]
@@ -134,7 +143,7 @@ description = "Check code for Grammar mistakes"
 skip_install = true
 deps = codespell
 # inet6, dhcp6 and the ipynb files contains french: ignore them
-commands = codespell --ignore-words=.travis/codespell_ignore.txt --skip="*.pyc,*.png,*.jpg,*.ods,*.raw,*.pdf,*.pcap,*.js,*.html,*.der,*_build*,*inet6.py,*dhcp6.py,*.ipynb,*.svg,*.gif,*.obs" scapy/ doc/ test/ .github/
+commands = codespell --ignore-words=.config/codespell_ignore.txt --skip="*.pyc,*.png,*.jpg,*.ods,*.raw,*.pdf,*.pcap,*.js,*.html,*.der,*_build*,*inet6.py,*dhcp6.py,*.ipynb,*.svg,*.gif,*.obs" scapy/ doc/ test/ .github/
 
 
 [testenv:twine]
