Apply guedou's suggestion

--- a/.config/mypy/mypy.ini
+++ b/.config/mypy/mypy.ini
@@ -8,3 +8,6 @@ ignore_missing_imports = True
 
 [mypy-traitlets.config.loader]
 ignore_missing_imports = True
+
+[mypy-scapy.modules.six,scapy.modules.winpcapy]
+ignore_errors = True
