Add autodoc & Documentation cleanup

--- a/tox.ini
+++ b/tox.ini
@@ -110,11 +110,23 @@ deps = codecov
 commands = codecov -e TOXENV
 
 
-[testenv:docs]
+[testenv:generate_docs]
+skip_install = true
 changedir = doc/scapy
 deps = sphinx
        sphinx_rtd_theme
-commands = sphinx-build -q -W . _build/html
+commands =
+  sphinx-apidoc --no-toc --separate --module-first --output-dir api ../../scapy ../../scapy/modules/ ../../scapy/tools/ ../../scapy/arch/ ../../scapy/contrib/cansocket* ../../scapy/all.py ../../scapy/layers/all.py
+  sphinx-build -b html . _build/html
+
+
+[testenv:docs]
+skip_install = true
+changedir = doc/scapy
+deps = sphinx
+       sphinx_rtd_theme
+commands =
+  sphinx-build -q -W -b html . _build/html
 
 
 [testenv:spell]
