Sphinx API hook / post-process sphinx-apidoc
- will help formatting some classes such as `Packet`
- will post-process sphinx-apidoc output to clean the doctree

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
         - os: linux
           python: 3.8
           env:
-            - TOXENV=docs
+            - TOXENV=apitree,docs
 
         - os: linux
           python: 3.8
