--- a/tox.ini
+++ b/tox.ini
@@ -112,15 +112,16 @@ deps = codecov
 commands = codecov -e TOXENV
 
 
-[testenv:generate_docs]
+# The files listed in thr sphinx-apidoc are ignored
+# (past the first argument)
+[testenv:apitree]
 description = "Regenerates the API reference doc tree"
 skip_install = true
 changedir = doc/scapy
 deps = sphinx
-       sphinx_rtd_theme
 commands =
-  sphinx-apidoc --no-toc --separate --module-first --output-dir api ../../scapy ../../scapy/modules/ ../../scapy/tools/ ../../scapy/arch/ ../../scapy/contrib/cansocket* ../../scapy/all.py ../../scapy/layers/all.py
-  sphinx-build -b html . _build/html
+  sphinx-apidoc -f --no-toc --separate --module-first --output-dir api ../../scapy ../../scapy/modules/ ../../scapy/tools/ ../../scapy/arch/ ../../scapy/contrib/cansocket* ../../scapy/all.py ../../scapy/layers/all.py
+  python sphinx_apidoc_postprocess.py
 
 
 [testenv:mypy]
@@ -138,6 +139,16 @@ deps = sphinx
        sphinx_rtd_theme
 commands =
   sphinx-build -q -W -b html . _build/html
+
+
+# Debug mode
+[testenv:docs2]
+skip_install = true
+changedir = doc/scapy
+deps = sphinx
+       sphinx_rtd_theme
+commands =
+  sphinx-build -E -b html . _build/html
 
 
 [testenv:spell]
