--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,9 @@
 
 
 [tox]
-envlist = py{27,34,35,36,37,py,py3}-{linux,bsd}_{non_root,root}, py{27,37}-windows, linux_warnings
+envlist = py{27,34,35,36,37,38,py,py3}-{linux,bsd}_{non_root,root},
+          py{27,37,38}-windows,
+          linux_warnings
 skip_missing_interpreters = true
 minversion = 2.9
 
