Use libpcap instead of TCPDUMP (filters)

--- a/tox.ini
+++ b/tox.ini
@@ -120,7 +120,7 @@ skip_install = true
 changedir = doc/scapy
 deps = sphinx
 commands =
-  sphinx-apidoc -f --no-toc --separate --module-first --output-dir api ../../scapy ../../scapy/modules/ ../../scapy/tools/ ../../scapy/arch/ ../../scapy/contrib/cansocket* ../../scapy/all.py ../../scapy/layers/all.py
+  sphinx-apidoc -f --no-toc --separate --module-first --output-dir api ../../scapy ../../scapy/modules/ ../../scapy/libs/ ../../scapy/tools/ ../../scapy/arch/ ../../scapy/contrib/cansocket* ../../scapy/all.py ../../scapy/layers/all.py
   python sphinx_apidoc_postprocess.py
 
 
@@ -180,5 +180,5 @@ commands = flake8 scapy/
 [flake8]
 ignore = E731, W504
 exclude = scapy/modules/six.py,
-          scapy/modules/winpcapy.py
-          scapy/modules/ethertypes.py
+          scapy/libs/winpcapy.py
+          scapy/libs/ethertypes.py
