--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,7 @@ deps = mock
        # support Python3 yet, both are currently disabled.
        pcapy>=0.11.3
        pydumbnet
+       python-can
 commands =
   sudo -E {envpython} -m coverage run -a -m scapy.tools.UTscapy -c ./test/configs/bsd.utsc -T test/bpf.uts -K manufdb -K tshark -K random_weird_py3 -K osx {posargs}
 
