--- a/.config/mypy/mypy.ini
+++ b/.config/mypy/mypy.ini
@@ -9,5 +9,6 @@ ignore_missing_imports = True
 [mypy-traitlets.config.loader]
 ignore_missing_imports = True
 
-[mypy-scapy.modules.six,scapy.modules.winpcapy]
+[mypy-scapy.modules.six,scapy.modules.six.moves,scapy.libs.winpcapy]
 ignore_errors = True
+ignore_missing_imports = True
