#2158 - Add Hinty for plist.py - Adds mypy from Issue #2158 (#2358)
* #2158 - Add Hinty for plist.py

* Import MATPLOTLIB from extlib.py

* Add Line2D and update for review comments

* Add regression test changes for new matplotlib.lines import

* Remove unnecessary space

* Add new line to restart appveyer build

--- a/.config/mypy/mypy.ini
+++ b/.config/mypy/mypy.ini
@@ -12,3 +12,10 @@ ignore_missing_imports = True
 [mypy-scapy.modules.six,scapy.modules.six.moves,scapy.libs.winpcapy]
 ignore_errors = True
 ignore_missing_imports = True
+
+[mypy-pyx]
+ignore_missing_imports = True
+
+[mypy-matplotlib.lines]
+ignore_missing_imports = True
+
