--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,7 @@ deps = mock
        pydumbnet
        python-can
 commands =
-  sudo -E {envpython} -m coverage run -a -m scapy.tools.UTscapy -c ./test/configs/bsd.utsc -T test/bpf.uts -K manufdb -K tshark -K random_weird_py3 -K osx {posargs}
+  sudo -E {envpython} -m coverage run -m scapy.tools.UTscapy -c ./test/configs/bsd.utsc -T test/bpf.uts -K manufdb -K tshark -K random_weird_py3 -K osx {posargs}
 
 
 [testenv:linux_warnings]
@@ -61,7 +61,7 @@ commands =
   bash -c "cd /tmp/can-isotp; make; sudo make modules_install; sudo modprobe can_isotp || sudo insmod ./net/can/can-isotp.ko" 
   bash -c "rm -rf /tmp/can-utils /tmp/can-isotp"
   lsmod
-  sudo -E {envpython} -m coverage run -a -m scapy.tools.UTscapy -c ./test/configs/linux.utsc -K random_weird_py3 {posargs}
+  sudo -E {envpython} -m coverage run -m scapy.tools.UTscapy -c ./test/configs/linux.utsc -K random_weird_py3 {posargs}
 
 
 [testenv]
@@ -82,11 +82,11 @@ platform =
   windows: win32
 
 commands =
-  linux_non_root: coverage run -a -m scapy.tools.UTscapy -c ./test/configs/linux.utsc -K random_weird_py3 -K netaccess -K needs_root {posargs}
-  linux_root: sudo -E {envpython} -m coverage run -a -m scapy.tools.UTscapy -c ./test/configs/linux.utsc -K random_weird_py3 {posargs}
-  bsd_non_root: coverage run -a -m scapy.tools.UTscapy -c test/configs/bsd.utsc -K manufdb -K tshark -K random_weird_py3 -K netaccess -K needs_root {posargs}
-  bsd_root: sudo -E {envpython} -m coverage run -a -m scapy.tools.UTscapy -c test/configs/bsd.utsc -K manufdb -K tshark -K random_weird_py3 {posargs}
-  windows: {envpython} -m coverage run -a -m scapy.tools.UTscapy -c test/configs/windows.utsc -K random_weird_py3 {posargs}
+  linux_non_root: coverage run -m scapy.tools.UTscapy -c ./test/configs/linux.utsc -K random_weird_py3 -K netaccess -K needs_root {posargs}
+  linux_root: sudo -E {envpython} -m coverage run -m scapy.tools.UTscapy -c ./test/configs/linux.utsc -K random_weird_py3 {posargs}
+  bsd_non_root: coverage run -m scapy.tools.UTscapy -c test/configs/bsd.utsc -K manufdb -K tshark -K random_weird_py3 -K netaccess -K needs_root {posargs}
+  bsd_root: sudo -E {envpython} -m coverage run -m scapy.tools.UTscapy -c test/configs/bsd.utsc -K manufdb -K tshark -K random_weird_py3 {posargs}
+  windows: {envpython} -m coverage run -m scapy.tools.UTscapy -c test/configs/windows.utsc -K random_weird_py3 {posargs}
   coverage combine
 
 
@@ -102,7 +102,7 @@ deps = mock
        python-can
 
 commands =
-  coverage run -a -m scapy.tools.UTscapy -c ./test/configs/linux.utsc -K random_weird_py3 -K netaccess -K needs_root -K crypto_advanced {posargs}
+  coverage run -m scapy.tools.UTscapy -c ./test/configs/linux.utsc -K random_weird_py3 -K netaccess -K needs_root -K crypto_advanced {posargs}
   coverage combine
 
 
