Use rfc() in autodoc

--- a/tox.ini
+++ b/tox.ini
@@ -93,15 +93,22 @@ changedir = doc/scapy
 deps = sphinx<2.4.0
        sphinx_rtd_theme
 commands =
-  sphinx-build -q -W -b html . _build/html
+  sphinx-build -q -W --keep-going -b html . _build/html
 
 
 # Debug mode
 [testenv:docs2]
 skip_install = true
 changedir = doc/scapy
-deps = {[testenv:docs]deps}
+deps = sphinx
+       sphinx_rtd_theme
+whitelist_externals = tox
+                      bash
+setenv =
+  SCAPY_APITREE = 0
 commands =
+  tox -q -q -q -e apitree
+  bash -c "find api -type f ! -name 'scapy.layers.inet.*' -and ! -name "scapy.rst" -and ! -name "scapy.layers.rst" | xargs rm"
   sphinx-build -E -b html . _build/html
 
 
