Reflak8ify all, http2 and UTscapy

--- a/tox.ini
+++ b/tox.ini
@@ -165,7 +165,7 @@ commands = flake8 scapy/
 [flake8]
 ignore = E731, W504
 per-file-ignores =
-    scapy/all.py:F403
+    scapy/all.py:F403,F401
     scapy/contrib/automotive/daimler/definitions.py:E501
     scapy/contrib/automotive/obd/obd.py:F405,F403
     scapy/contrib/automotive/obd/pid/pids.py:F405,F403
