--- a/tox.ini
+++ b/tox.ini
@@ -88,6 +88,7 @@ commands = python .config/mypy/mypy_check.py
 
 
 [testenv:docs]
+description = "Build the docs"
 skip_install = true
 changedir = doc/scapy
 deps = sphinx<2.4.0
@@ -98,18 +99,15 @@ commands =
 
 # Debug mode
 [testenv:docs2]
+description = "Build the docs without rebuilding the API tree"
 skip_install = true
 changedir = doc/scapy
 deps = sphinx
        sphinx_rtd_theme
-whitelist_externals = tox
-                      bash
 setenv =
   SCAPY_APITREE = 0
 commands =
-  tox -q -q -q -e apitree
-  bash -c "find api -type f ! -name 'scapy.layers.inet.*' -and ! -name "scapy.rst" -and ! -name "scapy.layers.rst" | xargs rm"
-  sphinx-build -E -b html . _build/html
+  sphinx-build -W -E -b html . _build/html
 
 
 [testenv:spell]
