obd scanner E501 exception

--- a/tox.ini
+++ b/tox.ini
@@ -169,7 +169,7 @@ per-file-ignores =
     scapy/contrib/automotive/daimler/definitions.py:E501
     scapy/contrib/automotive/obd/obd.py:F405,F403
     scapy/contrib/automotive/obd/pid/pids.py:F405,F403
-    scapy/contrib/automotive/obd/scanner.py:F405,F403
+    scapy/contrib/automotive/obd/scanner.py:F405,F403,E501
     scapy/contrib/automotive/volkswagen/definitions.py:E501
     scapy/contrib/eigrp.py:E501
     scapy/contrib/geneve.py:E501
