--- a/tox.ini
+++ b/tox.ini
@@ -94,7 +94,7 @@ changedir = doc/scapy
 deps = sphinx<2.4.0
        sphinx_rtd_theme
 commands =
-  sphinx-build -q -W --keep-going -b html . _build/html
+  sphinx-build -W --keep-going -b html . _build/html
 
 
 # Debug mode
@@ -107,7 +107,7 @@ deps = sphinx
 setenv =
   SCAPY_APITREE = 0
 commands =
-  sphinx-build -W -E -b html . _build/html
+  sphinx-build -W --keep-going -b html . _build/html
 
 
 [testenv:spell]
