--- a/tox.ini
+++ b/tox.ini
@@ -14,16 +14,9 @@ minversion = 2.9
 description = "Scapy unit tests - pcap & dnet"
 whitelist_externals = {[testenv]whitelist_externals}
 passenv = SCAPY_USE_PCAPDNET
-deps = mock
-       # cryptography requirements
-       setuptools>=18.5
-       cryptography
-       coverage
-       # Currently pcap & dnet are tested together. As pydumbnet does not
-       # support Python3 yet, both are currently disabled.
-       pcapy>=0.11.3
+deps = {[testenv]deps}
+       # As pydumbnet does not support Python3
        pydumbnet
-       python-can
 commands =
   sudo -E {envpython} -m coverage run -m scapy.tools.UTscapy -c ./test/configs/bsd.utsc -T test/bpf.uts -K manufdb -K tshark -K random_weird_py3 -K osx {posargs}
 
@@ -46,13 +39,7 @@ whitelist_externals = sudo
                       modprobe
 
 passenv = PATH PWD PROGRAMFILES WINDIR SYSTEMROOT
-deps = mock
-       # cryptography requirements
-       setuptools>=18.5
-       cryptography
-       coverage
-       python-can
-
+deps = {[testenv]deps}
 commands =
   sudo -E modprobe can
   git clone --depth=1 https://github.com/linux-can/can-utils.git /tmp/can-utils
@@ -130,8 +117,7 @@ commands =
 [testenv:docs2]
 skip_install = true
 changedir = doc/scapy
-deps = sphinx
-       sphinx_rtd_theme
+deps = {[docs]deps}
 commands =
   sphinx-build -E -b html . _build/html
 
