--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,6 @@
 [tox]
 envlist = py{27,34,35,36,37,38,py,py3}-{linux,bsd}_{non_root,root},
           py{27,34,25,36,37,38,py,py3}-windows,
-          linux_warnings
 skip_missing_interpreters = true
 minversion = 2.9
 
@@ -14,7 +13,11 @@ minversion = 2.9
 [testenv]
 description = "Scapy unit tests"
 whitelist_externals = sudo
-passenv = PATH PWD PROGRAMFILES WINDIR SYSTEMROOT SCAPY_USE_PCAPDNET
+passenv = PATH PWD PROGRAMFILES WINDIR SYSTEMROOT
+          # Used for warnings
+          PYTHONTRACEMALLOC PYTHONWARNINGS
+          # Used by scapy
+          SCAPY_USE_PCAPDNET
 deps = mock
        # cryptography requirements
        setuptools>=18.5
@@ -34,15 +37,6 @@ commands =
   coverage combine
 
 # Variants of the main tests
-
-[testenv:linux_warnings]
-description = "Scapy unit tests - health (garbage/deprecations) check"
-commands = sudo -E {envpython} -Werror -m scapy.tools.UTscapy -c ./test/configs/linux.utsc -K random_weird_py3 {posargs}
-deps = {[testenv]deps}
-platform = linux
-passenv = {[testenv]passenv}
-whitelist_externals = {[testenv]whitelist_externals}
-
 
 [testenv:py38-isotp_kernel_module]
 description = "Scapy unit tests - ISOTP Linux kernel module"
