Commandline-base packet viewer for Scapy

--- a/.config/mypy/mypy.ini
+++ b/.config/mypy/mypy.ini
@@ -25,3 +25,6 @@ ignore_missing_imports = True
 
 [mypy-prompt_toolkit.*]
 ignore_missing_imports = True
+
+[mypy-urwid]
+ignore_missing_imports = True
