--- a/tox.ini
+++ b/tox.ini
@@ -24,6 +24,7 @@ deps = mock
        python-can
        brotli<1.0.8
        zstandard==0.14.0
+       urwid
 platform =
   linux_non_root,linux_root: linux
   bsd_non_root,bsd_root: darwin|freebsd|openbsd|netbsd
